--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2066,10 +2066,9 @@ Business icon css
     display: inline-block;
 }
 h5{
-    font-family: Roboto;
     font-style: normal;
     font-weight: bold;
-    font-size: 1.5rem
+    font-size: 1.5rem;
     line-height: 23px;
     text-align: center;
 }
