add css tung nt

--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -133,6 +133,7 @@ ul.header-w3_pvt li span.fa {
 }
 .header-top ul li a{
     color: #ffffff;
+    height: 17px;
 }
 .header-top {
     background: #000000;
