--- a/public/static/frontend/css/style_fix.css
+++ b/public/static/frontend/css/style_fix.css
@@ -1,6 +1,41 @@
 .dropdown:hover>.dropdown-menu {
     display: block;
 }
+.box_solution {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+.hidden-box-solution {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0%;
+    text-align: center;
+    background: #F22D2D;
+    transform: rotateY(180deg);
+}
+.hidden-box-solution p {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 23px;
+    color: #FFFFFF;
+}
+.hidden-box-solution {
+    backface-visibility: hidden;
+}
+.box_solution:hover {
+    transform: rotateY(180deg);
+}
+.title-hidden {
+    padding-top: 20px;
+}
 @media all and (max-width : 991px) {
     .menu {
         position: fixed;
