--- a/public/static/frontend/css/style_fix.css
+++ b/public/static/frontend/css/style_fix.css
@@ -1,5 +1,18 @@
-.dropdown:hover>.dropdown-menu {
-    display: block;
+a.dropdown-toggle::after{
+    display: none;
+}
+.href-a {
+    padding-top: 0;
+}
+.btn-dropdown-toggle {
+    background: none;
+    border: none;
+}
+.btn-dropdown-toggle , .href-a{
+    display: inline-block !important;
+}
+.menu-mobile {
+    display: none;
 }
 .box_solution {
     position: relative;
@@ -36,7 +49,20 @@
 .title-hidden {
     padding-top: 20px;
 }
+@media all and (min-width: 992px) {
+    .href-a {
+        padding-right: 0 !important;
+        padding-bottom: 0;
+    }
+
+    .dropdown-menu {
+        top: 70%;
+    }
+}
 @media all and (max-width : 991px) {
+    .btn-dropdown-toggle {
+        display: block;
+    }
     .menu {
         position: fixed;
         right: 0;
@@ -49,7 +75,7 @@
         border-bottom: 1px solid #e9ecef;
         padding: 1rem 1.5rem;
         padding-left: 0;
-        padding-right: 0;
+        /*padding-right: 0;*/
     }
     .menu li a {
         text-transform: uppercase;
@@ -70,7 +96,34 @@
         overflow: hidden;
         margin-top: 10px;
     }
+    .dropdown-toggle::after{
+        display: none;
+    }
+    .href-a {
+        width: 80%;
+        display: inline-block !important;
+    }
+    .btn-dropdown-toggle {
+        background: none;
+        border: none;
+        display: inline-block !important;
+    }
+    .btn-dropdown-toggle::after {
+        display: inline-block;
+        width: 0;
+        height: 10px;
+        margin-left: 0.255em;
+        vertical-align: 0.255em;
+        content: "";
+        border-top: 0.3em solid;
+        border-right: 0.3em solid transparent;
+        border-bottom: 0;
+        border-left: 0.3em solid transparent;
+        color: red;
+        float: right;
+    }
 }
+
 @media all and (max-width : 320px) {
     .menu {
         top: 13%;
