--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2011,9 +2011,9 @@ a.move-top {
 .h3 {
     border-bottom: 2px solid #00afe9;
 }
-.title-h1{
-    margin-left: -2rem;
-}
+/*.title-h1{*/
+    /*margin-left: -2rem;*/
+/*}*/
 .tRight {
     text-align: right;
 }
