--- a/public/static/frontend/css/style_fix.css
+++ b/public/static/frontend/css/style_fix.css
@@ -20,7 +20,7 @@ a.dropdown-toggle::after{
     height: 100%;
     text-align: center;
     transition: transform 0.6s;
-    transform-style: preserve-3d;
+    /*transform-style: preserve-3d;*/
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 .hidden-box-solution {
@@ -31,7 +31,10 @@ a.dropdown-toggle::after{
     padding: 10px;
     text-align: center;
     background: #F22D2D;
-    transform: rotateY(180deg);
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.2s linear;
+    /*transform: rotateY(180deg);*/
 }
 .hidden-box-solution p {
     font-family: Roboto;
@@ -41,11 +44,15 @@ a.dropdown-toggle::after{
     line-height: 23px;
     color: #FFFFFF;
 }
-.hidden-box-solution {
-    backface-visibility: hidden;
-}
-.box_solution-home:hover {
-    transform: rotateY(180deg);
+/*.hidden-box-solution {*/
+/*    backface-visibility: hidden;*/
+/*}*/
+/*.box_solution-home:hover {*/
+/*    transform: rotateY(180deg);*/
+/*}*/
+.box_solution-home:hover .hidden-box-solution {
+    visibility: visible;
+    opacity: 1;
 }
 .title-hidden {
     padding-top: 20px;
