tung nt add css from

--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2686,6 +2686,13 @@ h4 {
     font-size: 40px;
     line-height: 47px;
 }
+.href-a{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+}
 
 div#carousel-example-1z {
     width: 100%;
