tung nt add css from

--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -314,7 +314,7 @@ h4{
     width: 270px;
     font-size: 14px;
     line-height: 16px;
-    text-align: justify;
+    /*text-align: justify;*/
     height: 90px;
 }
 .text_service{
