tung nt add css from

--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2089,7 +2089,7 @@ h5{
     text-align: center;
 }
 .item_solution_box{
-    margin-bottom: 20px;
+    margin-top: 20px;
     text-align: center;
 }
 
