tung nt add css from

--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2065,6 +2065,7 @@ a.move-top span{
 }
 .border_bottom_home{
     border-bottom: 2.5px solid red;
+    width: 100px;
 }
 .btn_contact_box{
     text-align: right;
