--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -435,6 +435,9 @@ nav a {
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
 }
+.hidden-box-solution .title-hidden{
+    font-weight: bold;
+}
 #return-to-top i {
     color: #fff;
     margin: 0;
