--- a/public/static/frontend/css/style_fix.css
+++ b/public/static/frontend/css/style_fix.css
@@ -112,10 +112,11 @@ a.dropdown-toggle::after{
         outline: 0;
     }
     .btn-dropdown-toggle::after {
-        transform: rotateZ(-90deg);
+        /*transform: rotateZ(0deg);*/
     }
     .rotateZ:after {
-        transform: rotateZ(0deg);
+        /*transform: rotateZ(180deg);*/
+        content: "\f077" !important;
     }
     .btn-dropdown-toggle {
         display: block;
