tung nt add css from

--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2344,11 +2344,10 @@ header .nav-link {
     border-radius: 50%;
 }
 .h2 {
-    margin-bottom: 20px;
-    padding: 4px 10px 0;
-    background-color: #00afe9;
-    color: #fff;
-    zoom: 1;
+    margin: 20px 0px;
+    padding: 4px 0px 0;
+    color: black;
+    font-weight: bold;
 }
 
 .copyMainEn {
@@ -2428,8 +2427,8 @@ header .nav-link {
 .copyMainEn {
     margin-bottom: 18px;
     color: #2153a0;
-    font-family: Georgia, Times New Roman, serif;
-    font-weight: normal;
+    font-weight: bold;
+    font-size: 20px;
 }
 #imgEco{
     margin: 25px;
