--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2391,8 +2391,18 @@ header .nav-link {
 #colNum01 {
     color: #E87690;
 }
-#blue_color{
+#blue_color {
     color: #1A25BD;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 23px;
+    display: flex;
+    align-items: center;
+}
+.magin_box_flow{
+    margin-right: 30px;
 }
 #numberx {
     border: 1px solid #1A25BD;
