--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2867,6 +2867,10 @@ div#carousel-example-1z {
         font-size: 15px;
         line-height: 1.5;
     }
+    .txtNaiyoEn {
+        margin-left: 3.5em;
+        font-size: 1.1rem;
+    }
 }
 @media screen and (max-width: 500px){
     .home_box .icon_box {
