--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2754,6 +2754,12 @@ div#carousel-example-1z {
     #button {
         margin: 30px;
     }
+
+}
+@media (min-width: 768px) {
+    .magin_box_flow{
+        margin-right: 30px;
+    }
 }
 @media screen and (min-width: 992px) {
     .business_box h4 {
@@ -2821,9 +2827,6 @@ div#carousel-example-1z {
     }
     .txt_h1 {
         top: 60%;
-    }
-    .magin_box_flow{
-        margin-right: 30px;
     }
 }
 @media screen and (max-width: 600px) {
