--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2739,6 +2739,10 @@ h4 {
     font-size: 40px;
     line-height: 47px;
 }
+.footer_box .container{
+    padding-left: 5px;
+    padding-right: 5px;
+}
 .href-a{
     font-family: Roboto;
     font-style: normal;
