tung nt add css from

--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2735,7 +2735,7 @@ h4 {
 }
 .text_banner_animation{
     font-style: normal;
-    font-weight: bold;
+    font-weight: 500;
     font-size: 40px;
     line-height: 47px;
 }
