--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -188,7 +188,10 @@ h4{
 }
 .main_content .nav .nav-item{
     width: 100%;
-    margin: 10px;
+    margin: 10px 0;
+}
+.col-md-3 .nav{
+    border-top: 1px solid #E0E0E0;
 }
 .breadcrumb_box{
     position: absolute;
@@ -2302,6 +2305,9 @@ a:hover , .read_more:hover p , .footer_box_ul li:hover a{
 .box_solution{
     width: fit-content;
     margin: auto;
+}
+.ul_padding_20{
+    padding-left: 4.5rem;
 }
 #tAfterMainteEn {
     /*height: 45px;*/
