--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -193,6 +193,9 @@ h4{
 .col-md-3 .nav{
     border-top: 1px solid #E0E0E0;
 }
+.col-md-4 .nav{
+    border-top: 1px solid #E0E0E0;
+}
 .breadcrumb_box{
     position: absolute;
     bottom: -4rem;
