tung nt change location text home wellcome

--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2728,6 +2728,9 @@ h4 {
 .mgBL img{
     width: 100%;
 }
+.table-bordered thead th, .table-bordered thead td {
+    min-width: 125px;
+}
 .img-center{
     text-align: center;
 }
