--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2734,6 +2734,17 @@ h4 {
 .img-center{
     text-align: center;
 }
+.bold_td{
+    font-family: Roboto;
+    font-weight: bold;
+}
+.nav-link{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 140%;
+}
 .boxFlow {
     position: relative;
     padding: 18px 18px 14px;
