tung nt change location text home wellcome

--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -2375,7 +2375,7 @@ header .nav-link {
     margin-bottom: 18px;
     color: #2153a0;
     font-family: Georgia, Times New Roman, serif;
-    font-weight: normal;
+    font-weight: normal;6
 }
 #colNum01 {
     color: #E87690;
