tung nt change location text home wellcome

--- a/public/static/frontend/css/style.css
+++ b/public/static/frontend/css/style.css
@@ -344,6 +344,7 @@ h4{
 .menu li a{
     text-transform: uppercase;
     font-weight: bold;
+    font-family: sans-serif;
 }
 header {
     position: absolute;
